# metadata-editor

./: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/sqlite_connector/: mod.rs  prepared.rs
src-tauri/src/filereader/: mod.rs
src-tauri/src/settings/: mod.rs
src/components/: TestFunct.jsx  ToolBar.jsx
