[package]
name = "metadata-editor"
version = "0.0.0"
description = "Metadata editor for Hyperion Applications (Planning, HFM)"
authors = ["Maxim Britvin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "fs-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite = "0.36.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
